<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_user"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_expenses"
            android:icon="@drawable/ic_expenses"
            android:title="@string/menu_expenses" />

        <item
            android:id="@+id/nav_analysis"
            android:icon="@drawable/ic_analysis2"
            android:title="@string/menu_analysis" />

        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_notes"
            android:title="@string/menu_notes" />
    </group>
</menu>