<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.newproject.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_expenses"
        android:name="com.example.newproject.ui.expenses.ExpensesFragment"
        android:label="@string/menu_expenses"
        tools:layout="@layout/fragment_expenses" />

    <fragment
        android:id="@+id/nav_analysis"
        android:name="com.example.newproject.ui.analysis.AnalysisFragment"
        android:label="@string/menu_analysis"
        tools:layout="@layout/fragment_analysis" />

    <fragment
        android:id="@+id/nav_notes"
        android:name="com.example.newproject.ui.notes.NotesFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/notes_fragment" />
</navigation>