<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".CreateAccountActivity">

    <ProgressBar
        android:id="@+id/create_acct_progress"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/acct_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/main_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:src="@drawable/logo_vec"/>

        <EditText
            android:id="@+id/username_account"
            android:hint="@string/username_hint"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingBottom="16dp"
            android:textColor="@color/offWhite"
            android:textColorHint="@color/offWhiteHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/uta_account"
            android:hint="@string/uta_hint"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:layout_marginTop="16dp"
            android:textColor="@color/offWhite"
            android:textColorHint="@color/offWhiteHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/income_account"
            android:hint="@string/income_hint"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:layout_marginTop="16dp"
            android:textColor="@color/offWhite"
            android:textColorHint="@color/offWhiteHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <AutoCompleteTextView
            android:id="@+id/email_account"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_marginTop="16dp"
            android:textColor="@color/offWhite"
            android:textColorHint="@color/offWhiteHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/password_account"
            android:layout_marginTop="16dp"
            android:hint="@string/password_hint"
            android:maxLines="1"
            android:inputType="textPassword"
            android:textColor="@color/offWhite"
            android:textColorHint="@color/offWhiteHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <RadioButton
            android:id="@+id/create_radio_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/meanGreen"
            android:text="@string/createAcct_radio"
            android:textColor="@color/offWhite" />

        <Button
            android:id="@+id/create_acct_button"
            android:textColor="@color/offWhite"
            android:background="@color/softGreen"
            android:textStyle="bold"
            android:text="@string/create_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>




    </LinearLayout>



</LinearLayout>