<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".CreateAccountActivity">

    <ProgressBar
        android:id="@+id/forgot_password_progress"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo_vec"/>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/acct_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/forgot_password_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="@color/offWhite"
            android:textSize="18sp"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/forgot_password_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/forgot_password_instruction"
            android:textAlignment="center"
            android:textColor="#99EFAC"
            android:textSize="16sp" />

        <AutoCompleteTextView
            android:id="@+id/forgot_password_email_account"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_marginTop="16dp"
            android:textColor="@color/offWhite"
            android:textColorHint="@color/offWhiteHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/forgot_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_btn"
            android:textColor="@color/offWhite"
            android:textStyle="bold"
            android:background="@drawable/rounded_corners"
            android:layout_marginBottom="15dp"/>

        <Button
            android:id="@+id/forgot_password_back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/back_to_login"
            android:textColor="@color/offWhite"
            android:textStyle="normal|bold" />


    </LinearLayout>


</LinearLayout>