<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notes.NotesFragment"
    android:background="@drawable/bg_gradient">

    <EditText
        android:id="@+id/notes_details"
        android:layout_width="348dp"
        android:paddingStart="10dp"
        android:layout_height="400dp"
        android:ems="10"
        android:gravity="start|top"
        android:background="#3C1E552A"
        android:hint="Enter your notes here. There is plenty of room for entering as many notes as you need. "
        android:inputType="textMultiLine"
        android:padding="6dp"
        android:textAlignment="textStart"
        android:textColor="@color/offWhite"
        android:textColorHint="@color/offWhiteHint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notes_title"
        app:layout_constraintVertical_bias="0.065"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/notes_title"
        android:layout_width="328dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="Enter Title"
        android:inputType="textPersonName"
        android:textColor="@color/offWhite"
        android:textColorHint="@color/offWhiteHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- spinner mode of a date picker -->

    <Button
        android:id="@+id/btn_change_date"
        android:layout_width="137dp"
        android:layout_height="41dp"
        android:background="@color/cardview_shadow_end_color"
        android:text="@string/Notes_set_date"
        android:textColor="@color/DeepGreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notes_progress_bar"
        app:layout_constraintVertical_bias="0.071" />

    <Button
        android:id="@+id/btn_goto_notes"
        android:layout_width="137dp"
        android:layout_height="41dp"
        android:background="@color/cardview_shadow_end_color"
        android:text="@string/Notes_goto_notePage"
        android:textColor="@color/DeepGreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.883"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notes_progress_bar"
        app:layout_constraintVertical_bias="0.071" />

    <Button
        android:id="@+id/btn_save_note"
        android:layout_width="168dp"
        android:layout_height="41dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/Notes_save_note"
        android:textColor="@color/offWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_change_date"
        app:layout_constraintVertical_bias="0.217" />

    <ProgressBar
        android:id="@+id/notes_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="239dp"
        android:layout_height="10dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notes_details" />

</androidx.constraintlayout.widget.ConstraintLayout>